# subscriby

./: .gitignore  LICENSE  README.md
api/: run.py
backend/: .database.env  .example.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2023_08_30_0351-7efcfff1704a_initial.py
backend/app/: app.py  handlers.py  logger.py  logging.py  settings.py
backend/app/database/: __init__.py  core.py
backend/app/database/models/: __init__.py  subscription.py
backend/app/database/repositories/: __init__.py  base.py  subscription.py
backend/app/plugins/: __init__.py  bases.py  custom_auth.py  custom_kpi.py  custom_payload.py
backend/app/routers/: __init__.py  analytics.py  subscription.py
backend/app/serializers/: __init__.py  subscription.py
backend/app/services/: __init__.py  auth.py  payload.py  webhook.py
backend/app/services/auth/: __init__.py  dependency.py
backend/app/services/payload/: __init__.py
backend/app/services/webhook/: __init__.py  broadcaster.py  events.py  sender.py
backend/app/settings/: __init__.py  auth.py  database.py  logging.py  settings.py  webhook.py
frontends/telegram/: .example.env  Dockerfile  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
frontends/telegram/app/: __init__.py  bot.py  bot_http.py  bot_local.py  handlers.py  keyboards.py  roles.py  settings.py  states.py  texts.py
frontends/telegram/app/filters/: role.py
frontends/telegram/app/middlewares/: role.py
(+26 files in other folders)
